--- a/assets/css/global/utility.css
+++ b/assets/css/global/utility.css
@@ -1,5 +1,4 @@
-/* Utility
----------------------------------------- */
+/* -- Utility -- */
 
 /* -- Image Blur -- */
 figure[class^='blur-'], figure[class*=' blur-'] {
