--- a/assets/css/blocks/core/search.css
+++ b/assets/css/blocks/core/search.css
@@ -4,3 +4,52 @@
 .wp-block-search.wp-block-search__button-only .wp-block-search__button {
 	max-width: inherit;
 }
+
+.wp-block-search.wp-block-search__button-inside .wp-block-search__inside-wrapper {
+	border-color: var(--wp--preset--color--grey-300);
+	border-radius: 0.375rem;
+	border-width: 2px;
+	margin-top: 0;
+	padding: 0;
+	position: relative;
+}
+
+.wp-block-search.wp-block-search__button-inside .wp-block-search__input {
+	color: var(--wp--preset--color--black);
+	font-size: var(--wp-wp--preset--font-size--x-small);
+	border-radius: 0.375rem;
+	padding: 0.75rem 3rem 0.75rem 1rem;
+	width: 100%;
+}
+
+.wp-block-search.wp-block-search__button-inside .wp-element-button {
+	background-color: transparent;
+	color: var(--wp--preset--color--grey-500);
+	padding: 0.5rem 0.75rem;
+	position: absolute;
+	right: 0;
+}
+
+.wp-block-search.wp-block-search__button-inside .wp-element-button svg,
+.wp-block-search.wp-block-search__button-only .wp-element-button svg {
+	height: 1.25rem;
+	transform: scaleX(-1);
+	width: 1.25rem;
+    min-height: 30px;
+    min-width: 30px;
+}
+
+.wp-block-search.wp-block-search__button-only .wp-block-search__input {
+	border-color: var(--wp--preset--color--grey-300);
+	border-radius: 0.375rem;
+	border-width: 2px;
+	margin: -0.25rem -1rem 0 0
+}
+
+.wp-block-search.wp-block-search__button-only .wp-element-button {
+	background-color: transparent;
+	color: var(--wp--preset--color--black);
+	padding: 0 0.75rem 0 0;
+	position: absolute;
+	right: 0.375rem;
+}
