--- a/assets/css/global/forms.css
+++ b/assets/css/global/forms.css
@@ -4,11 +4,11 @@ input,
 select,
 textarea {
 	background-color: var(--wp--preset--color--white);
-	border: 0.063rem solid var(--wp--preset--color--primary-500);
-	border-radius: 0;
+	border: 0.125rem solid var(--wp--preset--color--grey-300);
+	border-radius: 0.375rem;
 	color: var(--wp--preset--color--primary-500);
 	font-family: var(--wp--preset--font-family--outfit);
-	font-size: var(--wp--preset--font-size--medium);
+	font-size: var(--wp-wp--preset--font-size--x-small);
 	font-weight: var(--wp--custom--font-weight--light);
 	line-height: var(--wp--custom--line-height--body);
 	padding: 0.625rem 1.25rem;
@@ -37,7 +37,5 @@ textarea:focus {
 }
 
 ::placeholder {
-	color: var(--wp--preset--color--primary-500);
-	font-size: var(--wp--preset--font-size--small);
-	opacity: 0.5;
+	color: var(--wp--preset--color--grey-500);
 }
