--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,6 @@
 /* -- Global site styles -- */
 
 @import "global/global.css";
+@import "global/header.css";
 @import "global/forms.css";
 @import "global/utility.css";
