Add Faint shadow preset.

--- a/style.css
+++ b/style.css
@@ -191,6 +191,10 @@ textarea {
 
 /* -- Box Shadow -- */
 
+.is-style-shadow-faint {
+	box-shadow: var(--wp--preset--shadow--faint);
+}
+
 .is-style-shadow-light {
 	box-shadow: var(--wp--preset--shadow--light);
 }
