--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -15,17 +15,17 @@ textarea {
 	width: 100%;
 }
 
-input[type="checkbox"],
-input[type="image"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='image'],
+input[type='radio'] {
 	width: auto;
 }
 
-input[type="button"],
-input[type="email"],
-input[type="search"],
-input[type="submit"],
-input[type="text"],
+input[type='button'],
+input[type='email'],
+input[type='search'],
+input[type='submit'],
+input[type='text'],
 textarea {
 	-webkit-appearance: none;
 }
