Add webpack config and functions

--- a/style.css
+++ b/style.css
@@ -14,4 +14,4 @@ Text Domain: wdsbt
 Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, e-commerce, editor-style, full-site-editing, one-column, style-variations, translation-ready, wide-blocks
 */
 
-@import "./assets/css/index.css";
+@import './assets/css/index.css';
