--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,7 +1,9 @@
 /* -- Header -- */
 
 /* -- Header Search -- */
-.site-header .wp-block-search.wp-block-search__button-inside .wp-block-search__inside-wrapper {
+.site-header
+	.wp-block-search.wp-block-search__button-inside
+	.wp-block-search__inside-wrapper {
 	max-width: 13.375rem;
 }
 
