--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -1,18 +1,28 @@
 /* -- Forms -- */
 
+$input-border-color: var(--wp--preset--color--grey-300);
+$input-background-color: var(--wp--preset--color--white);
+$input-text-color: var(--wp--preset--color--primary-500);
+$input-font-family: var(--wp--preset--font-family--inter);
+$input-font-size: var(--wp--preset--font-size--medium);
+$input-font-weight: var(--wp--custom--font-weight--light);
+$input-line-height: var(--wp--custom--line-height--body);
+$input-padding: 0.625rem 1.25rem;
+$input-width: 100%;
+
 input,
 select,
 textarea {
-	background-color: var(--wp--preset--color--white);
-	border: 0.125rem solid var(--wp--preset--color--grey-300);
+	background-color: $input-background-color;
+	border: 0.125rem solid $input-border-color;
 	border-radius: 0.375rem;
-	color: var(--wp--preset--color--primary-500);
-	font-family: var(--wp--preset--font-family--inter);
-	font-size: var(--wp--preset--font-size--medium);
-	font-weight: var(--wp--custom--font-weight--light);
-	line-height: var(--wp--custom--line-height--body);
-	padding: 0.625rem 1.25rem;
-	width: 100%;
+	color: $input-text-color;
+	font-family: $input-font-family;
+	font-size: $input-font-size;
+	font-weight: $input-font-weight;
+	line-height: $input-line-height;
+	padding: $input-padding;
+	width: $input-width;
 }
 
 input[type='checkbox'],
