--- a/assets/scss/abstracts/_utility.scss
+++ b/assets/scss/abstracts/_utility.scss
@@ -1,17 +1,18 @@
 /* -- Utility -- */
 
 /* -- Image Blur -- */
+$blur-radius: 6px;
+
 figure[class^='blur-'],
 figure[class*=' blur-'] {
-	border-radius: 6px;
+	border-radius: $blur-radius;
 	overflow: hidden;
-}
 
-figure[class^='blur-'] img,
-figure[class*=' blur-'] img {
-	background-blend-mode: darken;
-	background-color: rgba(var(--wp--preset--color--white), 1);
-	border-radius: 6px;
+	img {
+		background-blend-mode: darken;
+		background-color: rgba(var(--wp--preset--color--white), 1);
+		border-radius: $blur-radius;
+	}
 }
 
 .blur-8 img {
@@ -81,9 +82,6 @@ figure[class*=' blur-'] img {
 	z-index: 99;
 }
 
-/* Effects
----------------------------------------- */
-
 /* Header */
 
 .js-enabled {
@@ -95,19 +93,14 @@ figure[class*=' blur-'] img {
 	}
 }
 
-/* Media Queries
----------------------------------------- */
+/* Media Queries */
 @include responsive-max(600px) {
-
-	/* Utility */
 	.is-style-hidden-mobile {
 		display: none !important; /* stylelint-disable-line declaration-no-important */
 	}
 }
 
 @include responsive-max(782px) {
-
-	/* Columns */
 	.wp-block-columns.is-style-column-reverse {
 		flex-direction: column-reverse;
 	}
