Style list blocks

--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -19,7 +19,7 @@
 			display: inline-block;
 			height: 1rem;
 			margin-left: 0.5rem;
-			mask-image: url(../../../images/icons/icon-circle-right.svg);
+			mask-image: url(../../../../build/images/icons/icon-circle-right.svg);
 			mask-size: contain;
 			position: relative;
 			vertical-align: middle;
