Set max-width for quote block

--- a/assets/scss/blocks/core/quote.scss
+++ b/assets/scss/blocks/core/quote.scss
@@ -1,6 +1,10 @@
 /* -- blockquote -- */
 
 .wp-block-quote {
+	max-width: calc(
+		var(--wp--style--global--content-size) - 30%
+	) !important; /* stylelint-disable-line declaration-no-important */
+
 	p {
 		font-style: inherit;
 		margin-bottom: 0;
