Add preformatted style

--- a/assets/scss/blocks/core/code.scss
+++ b/assets/scss/blocks/core/code.scss
@@ -1,6 +1,7 @@
 /* -- code -- */
 
 .wp-block-code {
+	letter-spacing: -0.023rem;
 	max-width: calc(
 		var(--wp--style--global--content-size) - 30%
 	) !important; /* stylelint-disable-line declaration-no-important */
