--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -50,7 +50,7 @@
 	.wp-block-button__link {
 		border-radius: 0.375rem;
 		border-width: 0.125rem;
-		font-size: 1.125rem;
+		font-size: var(--wp--preset--font-size--small);
 		padding: 1rem 1.5rem;
 
 		&::after {
