--- a/assets/scss/blocks/core/file.scss
+++ b/assets/scss/blocks/core/file.scss
@@ -1,3 +1,5 @@
+@import '../../abstracts/responsive-mixins';
+
 /* -- file -- */
 
 .wp-block-file {
@@ -6,18 +8,20 @@
 	) !important; /* stylelint-disable-line declaration-no-important */
 
 	a:not(.wp-element-button) {
-		border-bottom: 2px solid var(--wp--preset--color--grey-400);
+		box-shadow: inset 0 -2px 0 0 var(--wp--preset--color--grey-400);
 		padding-bottom: 2px;
 		text-decoration: none;
 
 		&:hover,
 		&:focus {
-			border-bottom: 2px solid var(--wp--preset--color--primary-500);
+			box-shadow: inset 0 -2px 0 0 var(--wp--preset--color--primary-500);
 			color: var(--wp--preset--color--primary-500);
 		}
 	}
 
 	.wp-block-file__button {
+		margin-left: 1.5rem;
+
 		&::after {
 			background-color: currentcolor;
 			content: '';
@@ -30,6 +34,30 @@
 			position: relative;
 			vertical-align: middle;
 			width: 1rem;
+		}
+	}
+
+	@include responsive-max(600px) {
+		display: flex;
+		flex-direction: column;
+
+		a:not(.wp-element-button) {
+			width: fit-content;
+		}
+
+		.wp-block-file__button {
+			border-radius: 0.375rem;
+			border-width: 0.125rem;
+			font-size: var(--wp--preset--font-size--small);
+			margin-left: 0;
+			margin-top: 0.75rem;
+			padding: 0.75rem 1rem;
+			text-align: center;
+
+			&::after {
+				height: 1.5rem;
+				width: 1.5rem;
+			}
 		}
 	}
 }
