--- a/assets/scss/blocks/core/file.scss
+++ b/assets/scss/blocks/core/file.scss
@@ -29,7 +29,7 @@
 			height: 1rem;
 			margin-left: 0.5rem;
 			margin-top: -0.125rem;
-			mask-image: url(../../../images/icons/icon-download.svg);
+			mask-image: url(../../../../build/images/icons/icon-download.svg);
 			mask-size: contain;
 			position: relative;
 			vertical-align: middle;
