--- a/assets/scss/blocks/core/search.scss
+++ b/assets/scss/blocks/core/search.scss
@@ -1,58 +1,64 @@
 /* Search
 ---------------------------------------- */
 .wp-block-search {
+	.wp-block-search__input {
+		padding: 0.75rem 1rem;
+	}
+
+	.wp-block-search__button {
+		border-radius: 0.25rem;
+
+		&.has-icon {
+			align-items: center;
+			display: flex;
+			height: 2.5rem;
+			justify-content: center;
+			width: 2.5rem;
+
+			svg {
+				height: 1rem;
+				transform: scaleX(-1);
+				width: 1rem;
+			}
+		}
+	}
+
 	&.wp-block-search__button-only {
-		.wp-block-search__button {
-			max-width: inherit;
+		&.wp-block-search__searchfield-hidden {
+			.wp-block-search__inside-wrapper {
+				border: none;
+			}
 		}
 
-		.wp-block-search__input {
-			border-color: var(--wp--preset--color--grey-300);
+		.wp-block-search__inside-wrapper {
+			align-items: center;
 			border-radius: 0.375rem;
-			border-width: 2px;
-			margin: -0.25rem -1rem 0 0;
-		}
+			border: 2px solid var(--wp--preset--color--grey-300);
+			padding: 0.5rem 0;
+			position: relative;
 
-		.wp-element-button {
-			background-color: transparent;
-			color: var(--wp--preset--color--black);
-			padding: 0.3rem 0.75rem 0 0;
-			position: absolute;
-			right: 0.375rem;
+			.wp-block-search__input {
+				border: none !important; /* stylelint-disable-line declaration-no-important */
+			}
+
+			.wp-block-search__button {
+				margin: 0 1rem 0 0;
+				max-width: inherit;
+			}
 		}
 	}
 
 	&.wp-block-search__button-inside {
 		.wp-block-search__inside-wrapper {
-			border-color: var(--wp--preset--color--grey-300);
+			border: 2px solid var(--wp--preset--color--grey-300);
 			border-radius: 0.375rem;
-			border-width: 2px;
 			margin-top: 0;
-			padding: 0;
+			padding: 0.5rem 1rem;
 			position: relative;
-		}
 
-		.wp-block-search__input {
-			color: var(--wp--preset--color--black);
-			font-size: var(--wp-wp--preset--font-size--x-small);
-			border-radius: 0.375rem;
-			padding: 0.75rem 3rem 0.75rem 1rem;
-			width: 100%;
-		}
-
-		.wp-element-button {
-			background-color: transparent;
-			color: var(--wp--preset--color--grey-500);
-			padding: 0.5rem 0.75rem;
-			position: absolute;
-			right: 0;
-
-			svg {
-				height: 1.25rem;
-				transform: scaleX(-1);
-				width: 1.25rem;
-				min-height: 30px;
-				min-width: 30px;
+			.wp-block-search__input {
+				border: none !important; /* stylelint-disable-line declaration-no-important */
+				padding: 0;
 			}
 		}
 	}
