--- a/assets/scss/blocks/core/search.scss
+++ b/assets/scss/blocks/core/search.scss
@@ -1,7 +1,12 @@
 /* Search
 ---------------------------------------- */
 .wp-block-search {
+	.wp-block-search__inside-wrapper {
+		margin-top: 0.5rem;
+	}
+
 	.wp-block-search__input {
+		margin-top: 0;
 		padding: 0.75rem 1rem;
 	}
 
