--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -3,10 +3,11 @@
 input,
 select,
 textarea {
-	border: 2px solid var(--wp--preset--color--grey-300) !important; /* stylelint-disable-line declaration-no-important */
 	border-radius: 0.375rem;
+	border: 2px solid var(--wp--preset--color--grey-300) !important; /* stylelint-disable-line declaration-no-important */
 	color: var(--wp--preset--color--black);
 	font-size: var(--wp-wp--preset--font-size--x-small);
+	margin-top: 0.5rem;
 	padding: 0.75rem 1rem;
 	width: 100%;
 }
@@ -27,6 +28,7 @@ textarea {
 }
 
 input[type='submit'] {
+	border: none !important; /* stylelint-disable-line declaration-no-important */
 	border-radius: 0.25rem;
 	padding: 0.625rem 1.125rem;
 }
@@ -45,5 +47,4 @@ label {
 	display: inline-block;
 	font-weight: 700;
 	letter-spacing: 0.032px;
-	margin-bottom: 0.5rem;
 }
