--- a/assets/scss/blocks/core/page-list.scss
+++ b/assets/scss/blocks/core/page-list.scss
@@ -1,8 +1,16 @@
 /* -- page list -- */
 
 .wp-block-page-list {
+	list-style-position: inside;
+	padding-left: 0.75rem;
+
 	li {
 		padding-bottom: 0.75rem;
+
+		&::marker {
+			color: var(--wp--preset--color--primary-500);
+			font-size: var(--wp--preset--font-size--small);
+		}
 
 		a {
 			color: var(--wp--preset--color--primary-500);
@@ -18,6 +26,7 @@
 		}
 
 		ul {
+			padding-left: 1.5rem;
 			padding-top: 0.75rem;
 		}
 	}
