Fix list and query and unit fixes

--- a/assets/scss/blocks/core/cover.scss
+++ b/assets/scss/blocks/core/cover.scss
@@ -20,7 +20,7 @@
 
 		.wp-block-button {
 			.wp-block-button__link {
-				border-radius: 0.375rem !important; /* stylelint-disable-line declaration-no-important */
+				border-radius: 6px !important; /* stylelint-disable-line declaration-no-important */
 				padding: 0.75rem 1rem !important; /* stylelint-disable-line declaration-no-important */
 
 				&::after {
