--- a/assets/scss/blocks/core/file.scss
+++ b/assets/scss/blocks/core/file.scss
@@ -46,8 +46,8 @@
 		}
 
 		.wp-block-file__button {
-			border-radius: 0.375rem;
-			border-width: 0.125rem;
+			border-radius: 6px;
+			border-width: 2px;
 			font-size: var(--wp--preset--font-size--small);
 			margin-left: 0;
 			margin-top: 0.75rem;
