--- a/assets/scss/blocks/core/query.scss
+++ b/assets/scss/blocks/core/query.scss
@@ -61,7 +61,7 @@
 			}
 
 			.wp-block-post-excerpt {
-				margin-top: 0.75rem !important; /* stylelint-disable-line declaration-no-important */
+				margin-top: 0.75rem;
 
 				.wp-block-post-excerpt__more-text {
 					margin-top: 0;
