--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -36,8 +36,8 @@
 
 .large.large.wp-block-button {
 	.wp-block-button__link {
-		border-radius: 0.375rem;
-		border-width: 0.125rem;
+		border-radius: 6px;
+		border-width: 2px;
 		font-size: 1rem;
 		padding: 0.75rem 1rem;
 	}
@@ -50,8 +50,8 @@
 
 .xlarge.xlarge.wp-block-button {
 	.wp-block-button__link {
-		border-radius: 0.375rem;
-		border-width: 0.125rem;
+		border-radius: 6px;
+		border-width: 2px;
 		font-size: var(--wp--preset--font-size--small);
 		padding: 1rem 1.5rem;
 
@@ -66,7 +66,7 @@
 .is-style-text.is-style-text.wp-block-button {
 	.wp-block-button__link {
 		background-color: transparent;
-		border: 0.063rem solid transparent;
+		border: 1px solid transparent;
 		color: var(--wp--preset--color--primary-500);
 		padding: 0.438rem 0.938rem;
 	}
@@ -77,7 +77,7 @@
 	.wp-block-button__link {
 		&:hover {
 			background-color: var(--wp--preset--color--primary-50);
-			border: 0.063rem solid var(--wp--preset--color--primary-500);
+			border: 1px solid var(--wp--preset--color--primary-500);
 		}
 	}
 }
