--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -3,7 +3,7 @@
 input,
 select,
 textarea {
-	border-radius: 0.375rem;
+	border-radius: 6px;
 	border: 2px solid var(--wp--preset--color--grey-300) !important; /* stylelint-disable-line declaration-no-important */
 	color: var(--wp--preset--color--black);
 	font-size: var(--wp-wp--preset--font-size--x-small);
@@ -29,7 +29,7 @@ textarea {
 
 input[type='submit'] {
 	border: none !important; /* stylelint-disable-line declaration-no-important */
-	border-radius: 0.25rem;
+	border-radius: 4px;
 	padding: 0.625rem 1.125rem;
 }
 
