--- a/templates/single.html
+++ b/templates/single.html
@@ -1,26 +1,71 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}}} -->
-<main
-  class="wp-block-group"
-  style="
-    margin-top: 0;
-    padding-top: var(--wp--preset--spacing--small);
-    padding-bottom: var(--wp--preset--spacing--small);
-  "
->
-  <!-- wp:group {"tagName":"article","layout":{"type":"default"}} -->
-  <article class="wp-block-group">
-    <!-- wp:group {"tagName":"header","style":{"spacing":{"blockGap":"10px"}},"className":"entry-header","layout":{"type":"constrained"}} -->
-    <header class="wp-block-group entry-header">
-      <!-- wp:post-title {"level":1} /-->
-      <!-- wp:pattern {"slug":"wdsbt/post-meta"} /-->
-    </header>
-    <!-- /wp:group -->
-    <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-    <!-- wp:pattern {"slug":"wdsbt/post-terms"} /-->
-    <!-- wp:pattern {"slug":"wdsbt/comments"} /-->
-  </article>
-  <!-- /wp:group -->
+<!-- wp:template-part {"slug":"header","theme":"wds-bt","tagName":"header","className":"site-header"} /-->
+
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"},"metadata":{"name":"Main"}} -->
+<main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
+
+	<!-- wp:group {"tagName":"article","layout":{"type":"default"},"metadata":{"name":"Content"}} -->
+	<article class="wp-block-group">
+		<!-- wp:post-title {"level":1} /-->
+		<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
+	</article>
+	<!-- /wp:group -->
+
+	<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|x-small","padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"},"metadata":{"name":"Post Terms"}} -->
+		<div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
+			<!-- wp:post-terms {"term":"category","textAlign":"center","prefix":"Categories"} /-->
+			<!-- wp:post-terms {"term":"post_tag","textAlign":"center","prefix":"Tags"} /-->
+		</div>
+	<!-- /wp:group -->
+
+	<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"},"metadata":{"name":"Pagination"}} -->
+	<div class="wp-block-group">
+		<!-- wp:post-navigation-link /-->
+		<!-- wp:post-navigation-link {"type":"previous"} /-->
+	</div>
+	<!-- /wp:group -->
+
+	<!-- wp:comments -->
+	<div class="wp-block-comments">
+		<!-- wp:comments-title /-->
+		<!-- wp:comment-template -->
+			<!-- wp:columns -->
+			<div class="wp-block-columns">
+				<!-- wp:column {"width":"40px"} -->
+				<div class="wp-block-column" style="flex-basis:40px">
+					<!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /-->
+				</div>
+				<!-- /wp:column -->
+
+				<!-- wp:column -->
+				<div class="wp-block-column">
+					<!-- wp:comment-author-name {"fontSize":"small"} /-->
+
+					<!-- wp:group {"style":{"spacing":{"margin":{"top":"0px","bottom":"0px"}}},"layout":{"type":"flex"}} -->
+					<div class="wp-block-group">
+						<!-- wp:comment-date {"fontSize":"small"} /-->
+						<!-- wp:comment-edit-link {"fontSize":"small"} /-->
+					</div>
+					<!-- /wp:group -->
+
+					<!-- wp:comment-content /-->
+					<!-- wp:comment-reply-link {"fontSize":"small"} /-->
+				</div>
+				<!-- /wp:column -->
+			</div>
+			<!-- /wp:columns -->
+		<!-- /wp:comment-template -->
+
+		<!-- wp:comments-pagination {"layout":{"type":"flex","justifyContent":"center"}} -->
+			<!-- wp:comments-pagination-previous /-->
+			<!-- wp:comments-pagination-numbers /-->
+			<!-- wp:comments-pagination-next /-->
+		<!-- /wp:comments-pagination -->
+
+		<!-- wp:post-comments-form /-->
+	</div>
+	<!-- /wp:comments -->
+
 </main>
 <!-- /wp:group -->
-<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
+
+<!-- wp:template-part {"slug":"footer","theme":"wds-bt","tagName":"footer","className":"site-footer"} /-->
