--- a/templates/page.html
+++ b/templates/page.html
@@ -1,16 +1,10 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}}} -->
-<main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
-	<!-- wp:group {"tagName":"article","layout":{"type":"default"}} -->
-	<article class="wp-block-group">
-		<!-- wp:group {"tagName":"header","className":"entry-header","layout":{"type":"constrained"}} -->
-		<header class="wp-block-group entry-header">
-			<!-- wp:post-title {"level":1} /-->
-		</header>
-		<!-- /wp:group -->
-		<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-	</article>
-	<!-- /wp:group -->
+<!-- wp:template-part {"slug":"header","theme":"wds-bt","tagName":"header","className":"site-header"} /-->
+
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"},"metadata":{"name":"Content"}} -->
+<main class="wp-block-group">
+	<!-- wp:post-title {"level":1} /-->
+	<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 </main>
 <!-- /wp:group -->
-<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
+
+<!-- wp:template-part {"slug":"footer","theme":"wds-bt","tagName":"footer","className":"site-footer"} /-->
