Blank page template

--- a/templates/page-blank.html
+++ b/templates/page-blank.html
@@ -1,5 +1,6 @@
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"},"metadata":{"name":"Content"}} -->
 <main class="wp-block-group">
+	<!-- wp:post-title {"level":1} /-->
 	<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 </main>
 <!-- /wp:group -->
