--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,23 +1,33 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"}} -->
-<main
-  class="wp-block-group"
-  style="
-    margin-top: 0;
-    padding-top: var(--wp--preset--spacing--small);
-    padding-bottom: var(--wp--preset--spacing--small);
-  "
->
-  <!-- wp:group {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|medium"},"blockGap":"10px"}}} -->
-  <div
-    class="wp-block-group"
-    style="margin-bottom: var(--wp--preset--spacing--medium)"
-  >
-    <!-- wp:query-title {"type":"archive","showPrefix":false} /-->
-    <!-- wp:term-description /-->
-  </div>
-  <!-- /wp:group -->
-  <!-- wp:pattern {"slug":"wdsbt/posts"} /-->
+
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained"},"metadata":{"name":"Content"}} -->
+<main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
+
+	<!-- wp:group {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|medium"},"blockGap":"10px"}}} -->
+	<div class="wp-block-group" style="margin-bottom:var(--wp--preset--spacing--medium)">
+		<!-- wp:query-title {"type":"archive","showPrefix":false,"fontSize":"x-large"} /-->
+		<!-- wp:term-description {"fontSize":"x-small"} /-->
+	</div>
+	<!-- /wp:group -->
+
+	<!-- wp:query {"queryId":0,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
+	<div class="wp-block-query">
+		<!-- wp:post-template {"layout":{"type":"grid","columnCount":3}} -->
+			<!-- wp:post-featured-image /-->
+			<!-- wp:post-terms {"term":"category"} /-->
+			<!-- wp:post-title {"isLink":true} /-->
+			<!-- wp:post-excerpt {"moreText":"Read More","excerptLength":20} /-->
+		<!-- /wp:post-template -->
+
+		<!-- wp:query-pagination -->
+			<!-- wp:query-pagination-previous /-->
+			<!-- wp:query-pagination-numbers /-->
+		<!-- wp:query-pagination-next /-->
+		<!-- /wp:query-pagination -->
+	</div>
+	<!-- /wp:query -->
+
 </main>
 <!-- /wp:group -->
+
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
