Search template and styles

--- a/assets/scss/pages/_pages.scss
+++ b/assets/scss/pages/_pages.scss
@@ -1,2 +1,3 @@
 // 'templates/' houses files with template-specific styles (e.g., front page template styles, no-sidebar styles).
 @import './archive';
+@import './search';
