--- a/templates/404.html
+++ b/templates/404.html
@@ -1,18 +1,25 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|x-large","bottom":"var:preset|spacing|x-large"}}}} -->
-<main
-  class="wp-block-group"
-  style="
-    margin-top: 0;
-    padding-top: var(--wp--preset--spacing--x-large);
-    padding-bottom: var(--wp--preset--spacing--x-large);
-  "
->
-  <!-- wp:group {"tagName":"article","layout":{"type":"constrained"}} -->
-  <article class="wp-block-group">
-    <!-- wp:pattern {"slug":"wdsbt/404"} /-->
-  </article>
-  <!-- /wp:group -->
-</main>
+
+<!-- wp:group {"className":"not-found","layout":{"type":"constrained"},"metadata":{"name":"404"}} -->
+<div class="wp-block-group not-found">
+	<!-- wp:heading {"className":"error-title","textAlign":"center","level":1} -->
+	<h1 class="wp-block-heading has-text-align-center error-title"><span title="404">404</span></h1>
+	<!-- /wp:heading -->
+
+	<!-- wp:heading {"textAlign":"center","level":3} -->
+	<h3 class="wp-block-heading has-text-align-center">What you are looking for is not here.</h3>
+	<!-- /wp:heading -->
+
+	<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
+	<div class="wp-block-group">
+		<!-- wp:heading {"textAlign":"center","level":4} -->
+		<h4 class="wp-block-heading has-text-align-center">Maybe searching will help.</h4>
+		<!-- /wp:heading -->
+
+		<!-- wp:search {"label":"Search","showLabel":false,"width":100,"widthUnit":"%","buttonText":"Search","buttonPosition":"button-only","buttonUseIcon":true,"isSearchFieldHidden":true,"align":"center"} /-->
+	</div>
+	<!-- /wp:group -->
+</div>
 <!-- /wp:group -->
+
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
