404 template and styles

--- a/assets/scss/pages/_404.scss
+++ b/assets/scss/pages/_404.scss
@@ -15,19 +15,19 @@
 				justify-content: center;
 				width: 100%;
 
-				&:before,
-				&:after {
+				&::before,
+				&::after {
 					content: attr(title);
 					position: absolute;
 				}
 
-				&:before {
+				&::before {
 					animation: glitchTop 1s linear infinite;
 					clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
 					-webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
 				}
 
-				&:after {
+				&::after {
 					animation: glitchBotom 1.5s linear infinite;
 					clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
 					-webkit-clip-path: polygon(
