Minor style adjustment to footer

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 /* -- footer -- */
 
 .site-footer {
-	background-color: var(--wp--preset--color--grey-100);
+	border-top: 1px solid var(--wp--preset--color--grey-400);
 	padding-bottom: var(--wp--preset--spacing--medium);
 	padding-top: var(--wp--preset--spacing--x-large);
 	margin-top: var(--wp--preset--spacing--x-large);
