Minor style fixes and generated new test data

--- a/templates/search.html
+++ b/templates/search.html
@@ -11,7 +11,7 @@
 		<!-- wp:post-template {"layout":{"type":"default","columnCount":3}} -->
 			<!-- wp:post-title {"isLink":true} /-->
 
-			<!-- wp:group {"className":"post-meta","layout":{"type":"flex","flexWrap":"nowrap"},"metadata":{"name":"Post Meta"}} -->
+			<!-- wp:group {"className":"post-meta","layout":{"type":"flex","flexWrap":"wrap"},"metadata":{"name":"Post Meta"}} -->
 			<div class="wp-block-group post-meta">
 				<!-- wp:paragraph -->
 				<p>Posted Date: <!-- wp:post-date /--></p>
