--- a/assets/scss/pages/_search.scss
+++ b/assets/scss/pages/_search.scss
@@ -22,6 +22,7 @@
 				font-family: var(--wp--preset--font-family--inter);
 				font-size: 0.75rem;
 				font-weight: 400;
+				line-height: 15px;
 				margin-top: 0.5rem !important; /* stylelint-disable-line declaration-no-important */
 			}
 
