--- a/assets/scss/blocks/core/calendar.scss
+++ b/assets/scss/blocks/core/calendar.scss
@@ -39,7 +39,7 @@
 
 				a {
 					background-color: var(--wp--preset--color--primary-500);
-					border-radius: 0.5rem;
+					border-radius: 8px;
 					color: var(--wp--preset--color--white);
 					display: inline-block;
 					padding: 1rem 0.75rem;
