--- a/assets/scss/blocks/core/table.scss
+++ b/assets/scss/blocks/core/table.scss
@@ -33,7 +33,7 @@
 			border: none;
 			clip: rect(0 0 0 0);
 			height: 1px;
-			margin: -1px;
+			margin: -0.0625rem;
 			overflow: hidden;
 			padding: 0;
 			position: absolute;
