--- a/assets/scss/pages/_search.scss
+++ b/assets/scss/pages/_search.scss
@@ -22,7 +22,7 @@
 				font-family: var(--wp--preset--font-family--inter);
 				font-size: 0.75rem;
 				font-weight: 400;
-				line-height: 15px;
+				line-height: 1.6;
 				margin-top: 0.5rem !important; /* stylelint-disable-line declaration-no-important */
 			}
 
@@ -30,6 +30,7 @@
 				font-family: var(--wp--preset--font-family--inter);
 				font-size: 0.75rem;
 				font-weight: 400;
+				line-height: 1.6;
 				padding-left: 0.375rem;
 
 				&::after {
